Ejercicio Lista de compra actualizada

--- a/index.html
+++ b/index.html
@@ -22,17 +22,18 @@
         <button id="btncomprar" class="btn btn-primary">Realizar compra</button>
       </form>
     </div>
-    <div class="row">
+    <div id="listado" class="row">
       <ul class="list-group">
         <li class="list-group-item"><span class="pull-left">Peras</span><span class="badge pull-left">0</span>
           <button type="button" class="btn btn-default pull-right glyphicon glyphicon-shopping-cart">
           </button>
         </li>
-        <li class="list-group-item"><span class="pull-left">Manzanas</span><span class="badge pull-left">1</span>
+        <li class="list-group-item"><span class="pull-left">Manzanas</span><span class="badge pull-left">0</span>
           <button type="button" class="btn btn-default pull-right glyphicon glyphicon-shopping-cart">
           </button>
+           
         </li>
-        <li class="list-group-item"><span class="pull-left">Melocotones</span><span class="badge pull-left">2</span>
+        <li class="list-group-item"><span class="pull-left">Melocotones</span><span class="badge pull-left">0</span>
           <button type="button" class="btn btn-default pull-right glyphicon glyphicon-shopping-cart">
           </button>
         </li>
